force-app/main/default/objects/GMBLASERP__Inventory_Adjustment__c/fields/GMBLASERP__Adjustment_Date__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Adjustment_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Adjustment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>