force-app/main/default/objects/GMBLASERP__Inventory_Adjustment__c/fields/GMBLASERP__GL_Account__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__GL_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>GL Account</label>
    <referenceTo>AcctSeed__GL_Account__c</referenceTo>
    <relationshipLabel>Inventory Adjustments</relationshipLabel>
    <relationshipName>Inventory_Adjustments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>