force-app/main/default/objects/GMBLASERP__Inventory_Adjustment__c/listViews/GMBLASERP__All.listView-meta.xml
<ListView>
    <fullName>GMBLASERP__All</fullName>
    <columns>NAME</columns>
    <columns>GMBLASERP__Adjustment_Date__c</columns>
    <columns>GMBLASERP__Adjustment_Type__c</columns>
    <columns>GMBLASERP__GL_Account__c</columns>
    <columns>GMBLASERP__Product__c</columns>
    <columns>Product_Record_Type__c</columns>
    <columns>GL_Account_Variable_1__c</columns>
    <columns>GMBLASERP__Warehouse__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>