force-app/main/default/objects/GMBLASERP__Inventory_Adjustment__c/listViews/Montreal_on_20_09_2018.listView-meta.xml
<ListView>
    <fullName>Montreal_on_20_09_2018</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>GMBLASERP__Adjustment_Date__c</columns>
    <columns>GMBLASERP__Adjustment_Type__c</columns>
    <columns>GMBLASERP__GL_Account__c</columns>
    <columns>GMBLASERP__Product__c</columns>
    <columns>Product_Record_Type__c</columns>
    <columns>GL_Account_Variable_1__c</columns>
    <columns>GMBLASERP__Warehouse__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>9/20/2018 12:00 AM</value>
    </filters>
    <filters>
        <field>GMBLASERP__Warehouse__c</field>
        <operation>equals</operation>
        <value>Montreal</value>
    </filters>
    <label>Montreal on 20/09/2018</label>
</ListView>